--- a/HyperSpectre/Builds/VisualStudio2022/HyperSpectre_SharedCode.vcxproj
+++ b/HyperSpectre/Builds/VisualStudio2022/HyperSpectre_SharedCode.vcxproj
@@ -139,6 +139,7 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Source\SpectrogramComponent.cpp"/>
     <ClCompile Include="..\..\Source\PluginProcessor.cpp"/>
     <ClCompile Include="..\..\Source\PluginEditor.cpp"/>
     <ClCompile Include="C:\JUCE\modules\juce_audio_basics\audio_play_head\juce_AudioPlayHead.cpp">
@@ -2823,6 +2824,7 @@
     <ClCompile Include="..\..\JuceLibraryCode\include_juce_gui_extra.cpp"/>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Source\SpectrogramComponent.hpp"/>
     <ClInclude Include="..\..\Source\PluginProcessor.hpp"/>
     <ClInclude Include="..\..\Source\PluginEditor.hpp"/>
     <ClInclude Include="C:\JUCE\modules\juce_audio_basics\audio_play_head\juce_AudioPlayHead.h"/>
