--- a/HyperSpectre/Builds/VisualStudio2022/HyperSpectre_SharedCode.vcxproj.filters
+++ b/HyperSpectre/Builds/VisualStudio2022/HyperSpectre_SharedCode.vcxproj.filters
@@ -697,6 +697,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Source\SpectrogramComponent.cpp">
+      <Filter>HyperSpectre\Source</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\Source\PluginProcessor.cpp">
       <Filter>HyperSpectre\Source</Filter>
     </ClCompile>
@@ -3558,6 +3561,9 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Source\SpectrogramComponent.hpp">
+      <Filter>HyperSpectre\Source</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\Source\PluginProcessor.hpp">
       <Filter>HyperSpectre\Source</Filter>
     </ClInclude>
