--- a/HyperSpectre/Builds/LinuxMakefile/Makefile
+++ b/HyperSpectre/Builds/LinuxMakefile/Makefile
@@ -116,6 +116,7 @@ OBJECTS_STANDALONE_PLUGIN := \
   $(JUCE_OBJDIR)/include_juce_audio_plugin_client_Standalone_1a871192.o \
 
 OBJECTS_SHARED_CODE := \
+  $(JUCE_OBJDIR)/KnobComponent_fed34708.o \
   $(JUCE_OBJDIR)/SpectrogramComponent_d8406099.o \
   $(JUCE_OBJDIR)/PluginProcessor_a059e380.o \
   $(JUCE_OBJDIR)/PluginEditor_94d4fb09.o \
@@ -200,6 +201,11 @@ $(JUCE_OBJDIR)/include_juce_audio_plugin_client_Standalone_1a871192.o: ../../Juc
 	-$(V_AT)mkdir -p $(@D)
 	@echo "Compiling include_juce_audio_plugin_client_Standalone.cpp"
 	$(V_AT)$(CXX) $(JUCE_CXXFLAGS) $(JUCE_CPPFLAGS_STANDALONE_PLUGIN) $(JUCE_CFLAGS_STANDALONE_PLUGIN) -o "$@" -c "$<"
+
+$(JUCE_OBJDIR)/KnobComponent_fed34708.o: ../../Source/KnobComponent.cpp
+	-$(V_AT)mkdir -p $(@D)
+	@echo "Compiling KnobComponent.cpp"
+	$(V_AT)$(CXX) $(JUCE_CXXFLAGS) $(JUCE_CPPFLAGS_SHARED_CODE) $(JUCE_CFLAGS_SHARED_CODE) -o "$@" -c "$<"
 
 $(JUCE_OBJDIR)/SpectrogramComponent_d8406099.o: ../../Source/SpectrogramComponent.cpp
 	-$(V_AT)mkdir -p $(@D)
